--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Medalworkshop2016.GitHub.io by MedalWorkshop2016</title>
+    <title>1st International Workshop on Multi-Engine Data AnaLytics (MEDAL 2016) by MedalWorkshop2016</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -11,18 +11,12 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Medalworkshop2016.GitHub.io</h1>
+      <h1 class="project-name">1st International Workshop on Multi-Engine Data AnaLytics (MEDAL 2016)</h1>
       <h2 class="project-tagline"></h2>
     </section>
 
     <section class="main-content">
-      <h1>
-<a id="1st-international-workshop-on-multi-engine-data-analytics" class="anchor" href="#1st-international-workshop-on-multi-engine-data-analytics" aria-hidden="true"><span class="octicon octicon-link"></span></a>1st International Workshop on Multi-Engine Data AnaLytics</h1>
-
-<h1>
-<a id="medal-2016" class="anchor" href="#medal-2016" aria-hidden="true"><span class="octicon octicon-link"></span></a>MEDAL 2016</h1>
-
-<h2>
+      <h2>
 <a id="motivation" class="anchor" href="#motivation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Motivation</h2>
 
 <p>The field of data analytics includes techniques, algorithms and tools for the inspection of data collections in order to extract patterns, generalizations and other useful information. Big data analytics has become a necessity in the majority of industries, enabling engineers, domain experts and scientists alike to tap the potential of vast amounts of data that are critical for business and science. The success and effectiveness of such analysis depend on numerous challenges related to the data itself, the nature of the analytics tasks, as well as the computing environment over which the analysis is performed. These issues have given rise to many diverse programming models, execution engines and data stores to enable large-scale data management. While all these systems have had great success, they still showcase their advantages on a limited subset of applications and types of data: For instance, graph-processing engines limit the amount of freedom in the computation at each node (or part of a graph) and fail to fully exploit possible parallelism. In addition, modern analytics workflows are tremendously complex: Data sources are heterogeneous and distributed. The tasks may be long- or short-running and entail different execution details depending on the user role and expertise. Furthermore, such tasks may range from simple or complex data operations and queries, to algorithmic processing, like data mining, text retrieval, data annotation, etc. Finally, the analysis may require multiple query engines. To harvest the benefits of this plethora of data and compute engines as well as programming models, libraries and tools available, we need coordinated, adaptive and integrative efforts on collectively tapping their potential. This central goal is the focus of this workshop. These efforts include the definition of versatile programming models, engine performance modeling and monitoring, extended planning and optimization algorithms, deployment/execution on multiple engines, as well as workflow management and visualization techniques, for complex analytics queries over large, heterogeneous, irregular or unstructured data over diverse compute environments.</p>
