Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -52,31 +52,15 @@
 <h3>
 <a id="workshop-co-chairs" class="anchor" href="#workshop-co-chairs" aria-hidden="true"><span class="octicon octicon-link"></span></a>Workshop co-chairs:</h3>
 
-<p>Verena Kantere, University of Geneva, Switzerland (contact person)
-Dimitrios Tsoumakos, Ionian University, Greece</p>
+<ul>
+<li>Verena Kantere, University of Geneva, Switzerland (contact person)</li>
+<li>Dimitrios Tsoumakos, Ionian University, Greece</li>
+</ul>
 
 <h3>
 <a id="technical-program-committee-tentative" class="anchor" href="#technical-program-committee-tentative" aria-hidden="true"><span class="octicon octicon-link"></span></a>Technical program committee (tentative):</h3>
 
-<ul>
-<li>Sihem Amer-Yahia, CNRS - Grenoble, France</li>
-<li>Alex Delis, University of Athens, Greece</li>
-<li>Bipin C. Desai, Concordia University, Canada</li>
-<li>Katerina Doka, National Technical University of Athens, Greece</li>
-<li>Thomas Heinis, Imperial College, UK</li>
-<li>Asterios Katsifodimos, TU Berlin, Germany</li>
-<li>Tasos Kementsietsidis, Google, USA</li>
-<li>Manolis Koumbarakis, University of Athens, Greece</li>
-<li>Laurent d’Orazio, University of Clermont Ferrand, France</li>
-<li>George Pallis, University of Cyprus, Cyprus</li>
-<li>Polyvios Pratikakis, Foundation for Research and Technology – Hellas (FORTH), Greece</li>
-<li>Philippe Rigaux, Internet Memory Research, France</li>
-<li>Arno Scharl, webLyzard technology, Austria</li>
-<li>Timos Sellis, RMIT, Australia</li>
-<li>Motomichi Toyama, Keio University, Japan</li>
-<li>Peter Triantafillou, University of Glasgow, UK</li>
-<li>Hans Vandierendonck, Queen's University Belfast, UK</li>
-</ul>
+<p>To be announced.</p>
 
 <h2>
 <a id="submissions" class="anchor" href="#submissions" aria-hidden="true"><span class="octicon octicon-link"></span></a>Submissions</h2>
