Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
 </ul>
 
 <h2>
+<a id="important-dates" class="anchor" href="#important-dates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Important Dates</h2>
+
+<p>To be announced.</p>
+
+<h2>
 <a id="committees" class="anchor" href="#committees" aria-hidden="true"><span class="octicon octicon-link"></span></a>Committees</h2>
 
 <h3>
@@ -60,7 +65,23 @@
 <h3>
 <a id="technical-program-committee-tentative" class="anchor" href="#technical-program-committee-tentative" aria-hidden="true"><span class="octicon octicon-link"></span></a>Technical program committee (tentative):</h3>
 
-<p>To be announced.</p>
+<ul>
+<li>Alex Delis, University of Athens, Greece</li>
+<li>Victor Chang, University of Southampton, UK </li>
+<li>Katerina Doka, National Technical University of Athens,  Greece</li>
+<li>Thomas Heinis, Imperial College, UK</li>
+<li>Asterios Katsifodimos, TU Berlin, Germany</li>
+<li>Tasos Kementsietsidis, Google, USA</li>
+<li>Manolis Koumbarakis, University of Athens, Greece</li>
+<li>Laurent d’ Orazio, University of Clermont Ferrand, France </li>
+<li>George Pallis, University of Cyprus, Cyprus</li>
+<li>Polyvios Pratikakis, Foundation for Research and Technology – Hellas (FORTH), Greece</li>
+<li>Philippe Rigaux, Internet Memory Research, France</li>
+<li>Senjuti Basu Roy, University of Washington, USA</li>
+<li>Arno Scharl, webLyzard technology, Austria</li>
+<li>Peter Triantafillou, University of Glasgow, UK</li>
+<li>Hans Vandierendonck, Queen's University Belfast, UK</li>
+</ul>
 
 <h2>
 <a id="submissions" class="anchor" href="#submissions" aria-hidden="true"><span class="octicon octicon-link"></span></a>Submissions</h2>
