Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 
 <ul>
 <li>Alex Delis, University of Athens, Greece</li>
+<li>Bipin C. Desai, Concordia University, Canada</li>
 <li>Victor Chang, University of Southampton, UK </li>
 <li>Katerina Doka, National Technical University of Athens,  Greece</li>
 <li>Thomas Heinis, Imperial College, UK</li>
