Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 <li>Asterios Katsifodimos, TU Berlin, Germany</li>
 <li>Tasos Kementsietsidis, Google, USA</li>
 <li>Manolis Koumbarakis, University of Athens, Greece</li>
+<li>Vera Moffitt, Drexel University, USA</li>
 <li>Laurent d’ Orazio, University of Clermont Ferrand, France </li>
 <li>George Pallis, University of Cyprus, Cyprus</li>
 <li>Polyvios Pratikakis, Foundation for Research and Technology – Hellas (FORTH), Greece</li>
