Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -32,8 +32,12 @@
 <li>Tools for advanced analytics tasks: theoretical and practical development of analytics tasks and operators for regular and irregular computations</li>
 <li>Visualization of analytics tasks: adaptive, user-friendly and diverse representation of real-time and batch tasks executing over single or multiple runtimes</li>
 <li>Applications of big data analytics: case-studies, exhibition of application-specific challenges</li>
-<li><p>This workshop will solicit original research work on fundamental aspects of big data analytics as well as the design, implementation and evaluation of novel tools, methods and applications for optimizing big data workflows (in parts or as a whole). We note here that contributions may span a wide range of topics, including (but not limited to):</p></li>
-<li><p>New or advanced models for data analytics, especially those unifying multiple data and execution engines</p></li>
+</ul>
+
+<p>This workshop will solicit original research work on fundamental aspects of big data analytics as well as the design, implementation and evaluation of novel tools, methods and applications for optimizing big data workflows (in parts or as a whole). We note here that contributions may span a wide range of topics, including (but not limited to):</p>
+
+<ul>
+<li>New or advanced models for data analytics, especially those unifying multiple data and execution engines</li>
 <li>Languages for data analytics</li>
 <li>Data analytics on multi-engine environments, adaptive execution</li>
 <li>Execution semantics of data analytics</li>
