--- a/index.html
+++ b/index.html
@@ -53,7 +53,11 @@
 <h2>
 <a id="important-dates" class="anchor" href="#important-dates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Important Dates</h2>
 
-<p>To be announced.</p>
+<ul>
+  <li>Paper Submission deadline: December 11, 2015</li>
+  <li>Notification to authors: January 9, 2016</li>
+  <li>Camera-ready deadline: January 2016</li>
+</ul>
 
 <h2>
 <a id="committees" class="anchor" href="#committees" aria-hidden="true"><span class="octicon octicon-link"></span></a>Committees</h2>
