--- a/index.html
+++ b/index.html
@@ -60,14 +60,18 @@
 </ul>
 
 <h2>
+<a id="programme" class="anchor" href="#programme" aria-hidden="true"><span class="octicon octicon-link"></span></a>Workshop Program and Keynotes</h2>
+TBA
+
+<h2>
 <a id="committees" class="anchor" href="#committees" aria-hidden="true"><span class="octicon octicon-link"></span></a>Committees</h2>
 
 <h3>
 <a id="workshop-co-chairs" class="anchor" href="#workshop-co-chairs" aria-hidden="true"><span class="octicon octicon-link"></span></a>Workshop co-chairs:</h3>
 
 <ul>
-<li>Verena Kantere, University of Geneva, Switzerland (contact person)</li>
-<li>Dimitrios Tsoumakos, Ionian University, Greece</li>
+<li>Verena Kantere, University of Geneva, Switzerland (Verena.Kantere@unige.ch)</li>
+<li>Dimitrios Tsoumakos, Ionian University, Greece (dtsouma@ionio.gr)</li>
 </ul>
 
 <h3>
@@ -96,7 +100,10 @@
 <h2>
 <a id="submissions" class="anchor" href="#submissions" aria-hidden="true"><span class="octicon octicon-link"></span></a>Submissions</h2>
 
-<p>MEDAL will be a half-day event, organized and themed around the ASAP FP7 EU-funded project (<a href="http://www.asap-fp7.eu/">http://www.asap-fp7.eu/</a>), which tackles the problem of complex analytical tasks over multi-engine environments that require integrated profiling, modeling, planning and scheduling functions. Papers will be submitted as PDF files, using the ACM SIG Proceedings double-column template (<a href="http://www.acm.org/sigs/publications/proceedings-templates">http://www.acm.org/sigs/publications/proceedings-templates</a>) with a page limit of: 8 pages for full submissions 4 pages for short/visionary paper submissions 2 pages for demo/tutorial submissions.</p>
+<p>MEDAL will be a half-day event, organized and themed around the ASAP FP7 EU-funded project (<a href="http://www.asap-fp7.eu/">http://www.asap-fp7.eu/</a>), which tackles the problem of complex analytical tasks over multi-engine environments that require integrated profiling, modeling, planning and scheduling functions.</p>
+<p>Papers will be submitted as PDF files, using the ACM SIG Proceedings double-column template (<a href="http://www.acm.org/sigs/publications/proceedings-templates">http://www.acm.org/sigs/publications/proceedings-templates</a>) with a page limit of: 8 pages for full submissions 4 pages for short/visionary paper submissions 2 pages for demo/tutorial submissions.</p>
+<b>Submission Site</b>
+All submissions will be handled electronically via EasyChair.
 
       <footer class="site-footer">
 
