--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 <a id="important-dates" class="anchor" href="#important-dates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Important Dates</h2>
 
 <ul>
-  <li>Paper Submission deadline: December 11, 2015</li>
-  <li>Notification to authors: January 9, 2016</li>
+  <li>Paper Submission deadline: EXTENDED TO December 28, 2015</li>
+  <li>Notification to authors: EXXTENDED TO January 18, 2016</li>
   <li>Camera-ready deadline: January 2016</li>
 </ul>
 
