--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 <ul>
   <li>Paper Submission deadline: EXTENDED TO December 28, 2015</li>
-  <li>Notification to authors: EXXTENDED TO January 18, 2016</li>
+  <li>Notification to authors: EXTENDED TO January 18, 2016</li>
   <li>Camera-ready deadline: January 2016</li>
 </ul>
 
