--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ TBA
 <p>MEDAL will be a half-day event, organized and themed around the ASAP FP7 EU-funded project (<a href="http://www.asap-fp7.eu/">http://www.asap-fp7.eu/</a>), which tackles the problem of complex analytical tasks over multi-engine environments that require integrated profiling, modeling, planning and scheduling functions.
 <br>Papers will be submitted as PDF files, using the ACM SIG Proceedings double-column template (<a href="http://www.acm.org/sigs/publications/proceedings-templates">http://www.acm.org/sigs/publications/proceedings-templates</a>) with a page limit of: 8 pages for full submissions 4 pages for short/visionary paper submissions 2 pages for demo/tutorial submissions.</p>
 <b>Submission Site</b><br>
-All submissions will be handled electronically via EasyChair. The lin for the submission page is : <a href="https://easychair.org/conferences/?conf=medal2016"https://easychair.org/conferences/?conf=medal2016</a>.
+All submissions will be handled electronically via EasyChair. The link for the submission page is : <a href="https://easychair.org/conferences/?conf=medal2016">https://easychair.org/conferences/?conf=medal2016</a>.
 
       <footer class="site-footer">
 
