--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 <h2>
 <a id="programme" class="anchor" href="#programme" aria-hidden="true"><span class="octicon octicon-link"></span></a>Workshop Program and Keynotes</h2>
-Keynote speaker: Volker Markl, Professor and Chair of the Database Systems and Information Management (DIMA) group at the Technische Universität Berlin (TU Berlin), on Flink and Mosaics
+Keynote speaker: <a href="https://www.dima.tu-berlin.de/menue/staff/volker_markl/">Volker Markl</a>, Professor and Chair of the Database Systems and Information Management (DIMA) group at the Technische Universität Berlin (TU Berlin), on Flink and Mosaics
 
 <h2>
 <a id="committees" class="anchor" href="#committees" aria-hidden="true"><span class="octicon octicon-link"></span></a>Committees</h2>
