--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">1st International Workshop on Multi-Engine Data AnaLytics (MEDAL 2016)</h1>
-      <h2 class="project-tagline">Bordeaux, France (collocated with EDBT 2016) <br>Tuesday March 15, 2016</h2>
+      <h2 class="project-tagline">Collocated with EDBT 2016<br>Bordeaux, France - Tuesday March 15, 2016</h2>
     </section>
 
     <section class="main-content">
