--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 <a id="important-dates" class="anchor" href="#important-dates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Important Dates</h2>
 
 <ul>
-  <li>Paper Submission deadline: EXTENDED TO December 28, 2015</li>
-  <li>Notification to authors: EXTENDED TO January 18, 2016</li>
-  <li>Camera-ready deadline: January 2016</li>
+  <li>Paper Submission deadline: EXTENDED TO December 31, 2015</li>
+  <li>Notification to authors: EXTENDED TO January 25, 2016</li>
+  <li>Camera-ready deadline: 05 February 2016</li>
 </ul>
 
 <h2>
