--- a/index.html
+++ b/index.html
@@ -61,7 +61,13 @@
 
 <h2>
 <a id="programme" class="anchor" href="#programme" aria-hidden="true"><span class="octicon octicon-link"></span></a>Workshop Program and Keynotes</h2>
-Keynote speaker: <a href="https://www.dima.tu-berlin.de/menue/staff/volker_markl/">Volker Markl</a>, Professor and Chair of the Database Systems and Information Management (DIMA) group at the Technische Universität Berlin (TU Berlin), on Flink and Mosaics
+<a href="http://edbticdt2016.labri.fr/?program_overview">EDBT/ICDT and Workshops Program Overview</a><br/>
+<h4>09:00 - 10:30	 Session 1</h4>
+	09:00 - 09:30 Nantia Makrynioti and Vasilis Vassalos. Towards an Analytics Query Engine <br/>
+	09:30 - 10:00 Yannis Papakonstantinou. Polystore Query Rewriting: The Challenges of Variety <br/>
+	10:00 - 10:30 Damianos Chatziantoniou and Florents Tselai. The Data Management Entity: A Simple Abstraction to Facilitate Big Data Systems Interoperability<br/>
+	
+Keynote speaker 1: <a href="https://www.dima.tu-berlin.de/menue/staff/volker_markl/">Volker Markl</a>, Professor and Chair of the Database Systems and Information Management (DIMA) group at the Technische Universität Berlin (TU Berlin), on Flink and Mosaics
 
 <h2>
 <a id="committees" class="anchor" href="#committees" aria-hidden="true"><span class="octicon octicon-link"></span></a>Committees</h2>
