--- a/index.html
+++ b/index.html
@@ -66,9 +66,24 @@
 	09:00 - 09:30 Nantia Makrynioti and Vasilis Vassalos. Towards an Analytics Query Engine <br/>
 	09:30 - 10:00 Yannis Papakonstantinou. Polystore Query Rewriting: The Challenges of Variety <br/>
 	10:00 - 10:30 Damianos Chatziantoniou and Florents Tselai. The Data Management Entity: A Simple Abstraction to Facilitate Big Data Systems Interoperability<br/>
-	
-Keynote speaker 1: <a href="https://www.dima.tu-berlin.de/menue/staff/volker_markl/">Volker Markl</a>, Professor and Chair of the Database Systems and Information Management (DIMA) group at the Technische Universität Berlin (TU Berlin), on Flink and Mosaics
+<h4>10:30 - 11:00 Coffee Break<br/>
+11:00 - 12:30 Session 2</h4>
+	11:00 - 11:55 <b>Keynote1: Big Data Management and Scalable Data Science: Key Challenges and (Some) Solutions</b>,  Prof. Dr. Volker Markl,  Professor and Chair of the Database Systems and Information Management (DIMA) group at the Technische Universität Berlin (TU Berlin)<br/>
+ 	11:55 - 12:30 <b>Keynote2: talk by Jorge Quiane-Ruiz, Researcher at the Qatar Computing Research Institute, (QCRI)<br/>
 
+<h4>12:30 - 14:00	 Lunch Break<br/>
+14:00 - 15:30 Session 3</h4>
+
+14:00 - 14:30 Camelia Elena Ciolac. MELOGRAPH: Multi-Engine WorkfLOw Graph Processing<br/>
+	14:30 - 15:00 Yannis Chronis, Yannis Foufoulas, Vaggelis Nikolopoulos, Alexandros Papadopoulos, Lefteris Stamatogiannakis, Christoforos Svingos and Yannis Ioannidis. A Relational Approach to Complex Dataflows<br/>
+	15:00 - 15:30 Katerina Doka, Maxim Filatov, Victor Giannakouris, Verena Kantere, Nectarios Koziris, Christos Mantas, Nikolaos Papailiou, Vasilios Papaioannou and Dimitrios Tsoumakos. Optimizing, Planning and Executing Analytics Workflows over Multiple Engines<br/>
+	
+<h4>15:30 - 16:00 Coffee Break<br/>
+16:00 - 17:30 Session 4</h4>
+	16:00 - 16:30 Florian Helff, Le Gruendwald and Laurent d'Orazio. Weighted Sum Model for Multi-Objective Query Optimization for Mobile-Cloud Database Environments<br/>
+	16:30 - 17:00 Hans Vandierendonck, Karen Murphy, Mahwish Arif, Jiawen Sun and Dimitrios Nikolopoulos. Operator and Workflow Optimization for High-Performance Analytics<br/>
+	17:00 - 17:30 Nikolaos Nodarakis, Spyros Sioutas, Athanasios Tsakalidis and Giannis Tzimas. Large Scale Sentiment Analysis on Twitter with Spark<br/>
+	
 <h2>
 <a id="committees" class="anchor" href="#committees" aria-hidden="true"><span class="octicon octicon-link"></span></a>Committees</h2>
 
