--- a/index.html
+++ b/index.html
@@ -51,33 +51,24 @@
 </ul>
 
 <h2>
-<a id="important-dates" class="anchor" href="#important-dates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Important Dates</h2>
-
-<ul>
-  <li>Paper Submission deadline: EXTENDED TO December 31, 2015</li>
-  <li>Notification to authors: EXTENDED TO January 25, 2016</li>
-  <li>Camera-ready deadline: 05 February 2016</li>
-</ul>
-
-<h2>
-<a id="programme" class="anchor" href="#programme" aria-hidden="true"><span class="octicon octicon-link"></span></a>Workshop Program and Keynotes</h2>
+<a id="programme" class="anchor" href="#programme" aria-hidden="true"><span class="octicon octicon-link"></span></a>Workshop Program</h2>
 <a href="http://edbticdt2016.labri.fr/?program_overview">EDBT/ICDT and Workshops Program Overview</a><br/>
 <h4>09:00 - 10:30	 Session 1</h4>
 	09:00 - 09:30 Nantia Makrynioti and Vasilis Vassalos. Towards an Analytics Query Engine <br/>
 	09:30 - 10:00 Yannis Papakonstantinou. Polystore Query Rewriting: The Challenges of Variety <br/>
-	10:00 - 10:30 Damianos Chatziantoniou and Florents Tselai. The Data Management Entity: A Simple Abstraction to Facilitate Big Data Systems Interoperability<br/>
+	10:00 - 10:30 Damianos Chatziantoniou and Florents Tselai. The Data Management Entity: A Simple Abstraction to Facilitate Big Data Systems Interoperability
 <h4>10:30 - 11:00 Coffee Break<br/>
 11:00 - 12:30 Session 2</h4>
-	11:00 - 11:55 <b>Keynote1: Big Data Management and Scalable Data Science: Key Challenges and (Some) Solutions</b>,  Prof. Dr. Volker Markl,  Professor and Chair of the Database Systems and Information Management (DIMA) group at the Technische Universität Berlin (TU Berlin)<br/>
- 	11:55 - 12:30 <b>Keynote2: talk by Jorge Quiane-Ruiz, Researcher at the Qatar Computing Research Institute, (QCRI)<br/>
+	11:00 - 11:55 Keynote1: <b>Big Data Management and Scalable Data Science: Key Challenges and (Some) Solutions</b>,  Prof. Dr. Volker Markl, TU Berlin<br/>
+ 	11:55 - 12:30 Keynote2: <b>Enabling Cross-Platform Applications with Rheem</b> Jorge Quiane-Ruiz, QCRI
 
 <h4>12:30 - 14:00	 Lunch Break<br/>
 14:00 - 15:30 Session 3</h4>
 
 14:00 - 14:30 Camelia Elena Ciolac. MELOGRAPH: Multi-Engine WorkfLOw Graph Processing<br/>
 	14:30 - 15:00 Yannis Chronis, Yannis Foufoulas, Vaggelis Nikolopoulos, Alexandros Papadopoulos, Lefteris Stamatogiannakis, Christoforos Svingos and Yannis Ioannidis. A Relational Approach to Complex Dataflows<br/>
-	15:00 - 15:30 Katerina Doka, Maxim Filatov, Victor Giannakouris, Verena Kantere, Nectarios Koziris, Christos Mantas, Nikolaos Papailiou, Vasilios Papaioannou and Dimitrios Tsoumakos. Optimizing, Planning and Executing Analytics Workflows over Multiple Engines<br/>
-	
+	15:00 - 15:30 Katerina Doka, Maxim Filatov, Victor Giannakouris, Verena Kantere, Nectarios Koziris, Christos Mantas, Nikolaos Papailiou, Vasilios Papaioannou and Dimitrios Tsoumakos. Optimizing, Planning and Executing Analytics Workflows over Multiple Engines
+<hr>	
 <h4>15:30 - 16:00 Coffee Break<br/>
 16:00 - 17:30 Session 4</h4>
 	16:00 - 16:30 Florian Helff, Le Gruendwald and Laurent d'Orazio. Weighted Sum Model for Multi-Objective Query Optimization for Mobile-Cloud Database Environments<br/>
@@ -116,6 +107,15 @@
 <li>Arno Scharl, webLyzard technology, Austria</li>
 <li>Peter Triantafillou, University of Glasgow, UK</li>
 <li>Hans Vandierendonck, Queen's University Belfast, UK</li>
+</ul>
+
+<h2>
+<a id="important-dates" class="anchor" href="#important-dates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Important Dates</h2>
+
+<ul>
+  <li>Paper Submission deadline: EXTENDED TO December 31, 2015</li>
+  <li>Notification to authors: EXTENDED TO January 25, 2016</li>
+  <li>Camera-ready deadline: 05 February 2016</li>
 </ul>
 
 <h2>
