--- a/index.html
+++ b/index.html
@@ -53,12 +53,15 @@
 <h2>
 <a id="programme" class="anchor" href="#programme" aria-hidden="true"><span class="octicon octicon-link"></span></a>Workshop Program</h2>
 <a href="http://edbticdt2016.labri.fr/?program_overview">EDBT/ICDT and Workshops Program Overview</a><br/>
+<hr>
 <h4>09:00 - 10:30	 Session 1</h4>
 	09:00 - 09:30 Nantia Makrynioti and Vasilis Vassalos. Towards an Analytics Query Engine <br/>
 	09:30 - 10:00 Yannis Papakonstantinou. Polystore Query Rewriting: The Challenges of Variety <br/>
 	10:00 - 10:30 Damianos Chatziantoniou and Florents Tselai. The Data Management Entity: A Simple Abstraction to Facilitate Big Data Systems Interoperability
-<h4>10:30 - 11:00 Coffee Break<br/>
-11:00 - 12:30 Session 2</h4>
+<hr>
+<h4>10:30 - 11:00 Coffee Break</h4>
+<hr>
+<h4>11:00 - 12:30 Session 2</h4>
 	11:00 - 11:55 Keynote1: <b>Big Data Management and Scalable Data Science: Key Challenges and (Some) Solutions</b>,  Prof. Dr. Volker Markl, TU Berlin<br/>
  	11:55 - 12:30 Keynote2: <b>Enabling Cross-Platform Applications with Rheem</b> Jorge Quiane-Ruiz, QCRI
 
