--- a/index.html
+++ b/index.html
@@ -61,23 +61,49 @@
 <hr>
 <h4>10:30 - 11:00 Coffee Break</h4>
 <hr>
-<h4>11:00 - 12:30 Session 2</h4>
+<h4>11:00 - 12:30 Session 2 - Keynote Speeches</h4>
 	11:00 - 11:55 Keynote1: <b>Big Data Management and Scalable Data Science: Key Challenges and (Some) Solutions</b>,  Prof. Dr. Volker Markl, TU Berlin<br/>
  	11:55 - 12:30 Keynote2: <b>Enabling Cross-Platform Applications with Rheem</b> Jorge Quiane-Ruiz, QCRI
-
-<h4>12:30 - 14:00	 Lunch Break<br/>
+<hr>
+<h4>12:30 - 14:00	 Lunch Break
+<hr>
 14:00 - 15:30 Session 3</h4>
 
 14:00 - 14:30 Camelia Elena Ciolac. MELOGRAPH: Multi-Engine WorkfLOw Graph Processing<br/>
 	14:30 - 15:00 Yannis Chronis, Yannis Foufoulas, Vaggelis Nikolopoulos, Alexandros Papadopoulos, Lefteris Stamatogiannakis, Christoforos Svingos and Yannis Ioannidis. A Relational Approach to Complex Dataflows<br/>
 	15:00 - 15:30 Katerina Doka, Maxim Filatov, Victor Giannakouris, Verena Kantere, Nectarios Koziris, Christos Mantas, Nikolaos Papailiou, Vasilios Papaioannou and Dimitrios Tsoumakos. Optimizing, Planning and Executing Analytics Workflows over Multiple Engines
 <hr>	
-<h4>15:30 - 16:00 Coffee Break<br/>
+<h4>15:30 - 16:00 Coffee Break
+<hr>
 16:00 - 17:30 Session 4</h4>
 	16:00 - 16:30 Florian Helff, Le Gruendwald and Laurent d'Orazio. Weighted Sum Model for Multi-Objective Query Optimization for Mobile-Cloud Database Environments<br/>
 	16:30 - 17:00 Hans Vandierendonck, Karen Murphy, Mahwish Arif, Jiawen Sun and Dimitrios Nikolopoulos. Operator and Workflow Optimization for High-Performance Analytics<br/>
 	17:00 - 17:30 Nikolaos Nodarakis, Spyros Sioutas, Athanasios Tsakalidis and Giannis Tzimas. Large Scale Sentiment Analysis on Twitter with Spark<br/>
-	
+
+<h2>
+<a id="keynote" class="anchor" href="#keynote" aria-hidden="true"><span class="octicon octicon-link"></span></a>Keynote Talks</h2>
+<h4>Keynote 1</h4>
+<b>Big Data Management and Scalable Data Science: Key Challenges and (Some) Solutions</b><br/>
+
+Prof. Dr. Volker Markl<br/>
+
+Abstract: The shortage of qualified data scientists is effectively limiting Big Data from fully realizing its potential to deliver insight and provide value for scientists, business analysts, and society as a whole. Data science draws on a broad number of advanced concepts from the mathematical, statistical, and computer sciences in addition to requiring knowledge in an application domain. Solely teaching these diverse skills will not enable us to on a broad scale exploit the power of predictive and prescriptive models for huge, heterogeneous, and high-velocity data. Instead, we will have to simplify the tasks a data scientist needs to perform, bringing technology to the rescue: for example, by developing novel ways for the specification, automatic parallelization, optimization, and efficient execution of deep data analysis workflows. This will require us to integrate concepts from data management systems, scalable processing, and machine learning, in order to build widely usable and scalable data analysis systems. In this talk, I will present some of our research results towards this goal, including the Apache Flink open-source big data analytics system, concepts for the scalable processing of iterative data analysis programs, and ideas on enabling optimistic fault tolerance.<br/>
+
+Bio: Volker Markl is a Full Professor and Chair of the Database Systems and Information Management (DIMA) group at the Technische Universität Berlin (TU Berlin) and also holds a position as an adjunct full professor at the University of Toronto. He is director of the research group “Intelligent Analysis of Mass Data” at DFKI, the German Research Center for Artificial Intelligence and director of Berlin Big Data Center, a collaborative research center bringing together research groups in the areas of distributed systems, scalable data processing, text mining, networking, machine learning and applications in several areas, such as healthcare, logistics, Industrie 4.0, and information marketplaces.
+
+Earlier in his career, Dr. Markl lead a research group at FORWISS, the Bavarian Research Center for Knowledge-based Systems in Munich, Germany, and was a Research Staff member & Project Leader at the IBM Almaden Research Center in San Jose, California, USA. His research interests include: new hardware architectures for information management, scalable processing and optimization of declarative data analysis programs, and scalable data science, including graph and text mining, and scalable machine learning.
+
+Volker Markl has presented over 200 invited talks in numerous industrial settings and at major conferences and research institutions worldwide. He has authored and published more than 100 research papers at world-class scientific venues. He has been speaker and principal investigator of the Stratosphere collaborative research unit funded by the German National Science Foundation (DFG), which resulted in numerous top-tier publications as well as the "Apache Flink" big data analytics system. Dr. Markl currently serves as the secretary of the VLDB Endowment and was elected as one of Germany's leading "digital minds" (Digitale Köpfe) by the German Informatics Society (GI).
+
+<h4>Keynote 2</h4>
+<b>Enabling Cross-Platform Applications with Rheem</b><br/>
+Abstract:
+The world is fast moving towards a data-driven society where data is the most valuable asset. Organizations need to perform very diverse analytic tasks using various data processing platforms. In doing so, they face many challenges; mainly, platform dependence, poor interoperability, and poor performance when using multiple platforms. In this talk, I will present Rheem, our vision for big data analytics over diverse data processing platforms. Rheem provides a three-layer data processing and storage abstraction to achieve both platform independence and interoperability across multiple platforms. I will discuss how Rheem allows for cross-platform applications. In particular, I will present a machine learning and a data cleaning application and show how applications can leverage the platform-independence and cross-platform execution features of Rheem to boost performance. I will conclude with a discussion on the multiple research challenges that we need to address to achieve our vision. 
+<br/>
+Bio:
+Jorge-Arnulfo Quiané-Ruiz is a Scientist at the Qatar Computing Research Institute (QCRI) since October 2012. His research interests include cross-platform data management, big data analytics, and big data profiling. Before joining QCRI, Jorge was research associate at Saarland University for three years. He did his Ph.D. in Computer Science at INRIA and University of Nantes, France obtained his degree in September 2008. He received a M.Sc. in Computer Science with specialty in Networks and Distributed Systems from Joseph Fourier University, Grenoble, France, in July 2004. He obtained, with highest honors, a M.Sc. in Computer Science from the National Polytechnic Institute, Mexico, in August 2003.
+
+
 <h2>
 <a id="committees" class="anchor" href="#committees" aria-hidden="true"><span class="octicon octicon-link"></span></a>Committees</h2>
 
