--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <hr>
 <h4>11:00 - 12:30 Session 2 - Keynote Talks</h4>
 	<b>11:00 - 11:55</b> <u>Keynote1:</u> <i>Big Data Management and Scalable Data Science: Key Challenges and (Some) Solutions</i>,  Prof. Dr. Volker Markl, TU Berlin<br/>
- 	<b>11:55 - 12:30</b> <u>Keynote2:</u> <i>Enabling Cross-Platform Applications with Rheem</i>, Jorge Quiane-Ruiz, QCRI
+ 	<b>11:55 - 12:30</b> <u>Keynote2:</u> <i>Enabling Cross-Platform Applications with Rheem</i>, Dr. Jorge Quiane-Ruiz, QCRI
 <hr>
 <h4>12:30 - 14:00	 Lunch Break
 <hr>
