--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ Volker Markl has presented over 200 invited talks in numerous industrial setting
 
 <h4>Keynote 2</h4>
 <b>Enabling Cross-Platform Applications with Rheem</b><br/>
-Jorge Quiane-Ruiz<br/><br/>
+Dr. Jorge Quiane-Ruiz<br/><br/>
 <b>Abstract:</b><br/>
 The world is fast moving towards a data-driven society where data is the most valuable asset. Organizations need to perform very diverse analytic tasks using various data processing platforms. In doing so, they face many challenges; mainly, platform dependence, poor interoperability, and poor performance when using multiple platforms. In this talk, I will present Rheem, our vision for big data analytics over diverse data processing platforms. Rheem provides a three-layer data processing and storage abstraction to achieve both platform independence and interoperability across multiple platforms. I will discuss how Rheem allows for cross-platform applications. In particular, I will present a machine learning and a data cleaning application and show how applications can leverage the platform-independence and cross-platform execution features of Rheem to boost performance. I will conclude with a discussion on the multiple research challenges that we need to address to achieve our vision. 
 <br/><br/>
