--- a/index.html
+++ b/index.html
@@ -8,8 +8,16 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+    <link href="style.css" rel="stylesheet" />
   </head>
   <body>
+  <nav>
+    <ul>
+        <li><a href="#programe">Workshop Program</a></li>
+        <li><a href="#keynote">Keynotes</a></li>
+        <li><a href="#committees">Committees</a></li>
+    </ul>
+  </nav>
     <section class="page-header">
       <h1 class="project-name">1st International Workshop on Multi-Engine Data AnaLytics (MEDAL 2016)</h1>
       <h2 class="project-tagline">Collocated with EDBT 2016<br>Bordeaux, France - Tuesday March 15, 2016</h2>
@@ -117,7 +125,7 @@ Jorge-Arnulfo Quiané-Ruiz is a Scientist at the Qatar Computing Research Instit
 </ul>
 
 <h3>
-<a id="technical-program-committee-tentative" class="anchor" href="#technical-program-committee-tentative" aria-hidden="true"><span class="octicon octicon-link"></span></a>Technical program committee (tentative):</h3>
+<a id="PC" class="anchor" href="#PC" aria-hidden="true"><span class="octicon octicon-link"></span></a>Technical program committee (tentative):</h3>
 
 <ul>
 <li>Alex Delis, University of Athens, Greece</li>
