--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
-    <link href="stylesheets/style.css" rel="stylesheet" />
+    <link href="stylesheets/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-  <nav>
-    <ul>
-        <li><a href="#programe">Workshop Program</a></li>
-        <li><a href="#keynote">Keynotes</a></li>
-        <li><a href="#committees">Committees</a></li>
-    </ul>
-  </nav>
     <section class="page-header">
       <h1 class="project-name">1st International Workshop on Multi-Engine Data AnaLytics (MEDAL 2016)</h1>
       <h2 class="project-tagline">Collocated with EDBT 2016<br>Bordeaux, France - Tuesday March 15, 2016</h2>
     </section>
 
     <section class="main-content">
+   <nav>
+    <ul>
+        <li><a href="#programe">Workshop Program</a></li>
+        <li><a href="#keynote">Keynotes</a></li>
+        <li><a href="#committees">Committees</a></li>
+    </ul>
+  </nav>
       <h2>
 <a id="motivation" class="anchor" href="#motivation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Motivation</h2>
 
