--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
     <section class="main-content">
    <nav>
     <ul>
+        <li><a href="#topics">Topics</a></li>
         <li><a href="#programe">Workshop Program</a></li>
         <li><a href="#keynote">Keynotes</a></li>
         <li><a href="#committees">Committees</a></li>
+        <li><a href="#important-dates">Dates and Submissions</a></li>
+        
     </ul>
   </nav>
       <h2>
@@ -30,7 +33,7 @@
 <p>The field of data analytics includes techniques, algorithms and tools for the inspection of data collections in order to extract patterns, generalizations and other useful information. The success and effectiveness of such analysis depend on numerous challenges related to the data itself, the nature of the analytics tasks, as well as the computing environment over which the analysis is performed. These issues have given rise to many diverse programming models, execution engines and data stores to enable large-scale data management. While all these systems have had great success, they still showcase their advantages on a limited subset of applications and types of data: For instance, graph-processing engines limit the amount of freedom in the computation at each node (or part of a graph) and fail to fully exploit possible parallelism. In addition, modern analytics workflows are tremendously complex: Data sources are heterogeneous and distributed. The tasks may be long- or short-running and entail different execution details depending on the user role and expertise. Furthermore, such tasks may range from simple or complex data operations and queries, to algorithmic processing, like data mining, text retrieval, data annotation, etc. Finally, the analysis may require multiple query engines. To harvest the benefits of this plethora of data and compute engines as well as programming models, libraries and tools available, we need coordinated, adaptive and integrative efforts on collectively tapping their potential. This central goal is the focus of this workshop. These efforts include the definition of versatile programming models, engine performance modeling and monitoring, extended planning and optimization algorithms, deployment/execution on multiple engines, as well as workflow management and visualization techniques, for complex analytics queries over large, heterogeneous, irregular or unstructured data over diverse compute environments.</p>
 
 <h2>
-<a id="workshop-focus-and-related-topics" class="anchor" href="#workshop-focus-and-related-topics" aria-hidden="true"><span class="octicon octicon-link"></span></a>Workshop focus and related topics</h2>
+<a id="topics" class="anchor" href="#topics" aria-hidden="true"><span class="octicon octicon-link"></span></a>Workshop focus and related topics</h2>
 
 <p>The goal of the 1st International Workshop on Multi Engine Data Analytics (MEDAL) is to bring together researchers and practitioners from both academia and industry to explore, discuss and possibly redefine the state of the art in big data analytics relative to modeling, methods and tools applied over any part of algorithms and computing infrastructures, as well as use-cases and applications that relate to big data analytics over multi-engine environments. Concretely, the workshop is expected to provide insight into:</p>
 
@@ -63,9 +66,11 @@
 <a href="http://edbticdt2016.labri.fr/?program_overview">EDBT/ICDT and Workshops Program Overview</a><br/>
 <hr>
 <h4>09:00 - 10:30	 Session 1</h4>
-	<b>09:00 - 09:30</b> Nantia Makrynioti and Vasilis Vassalos. Towards an Analytics Query Engine <br/>
-	<b>09:30 - 10:00</b> Yannis Papakonstantinou. Polystore Query Rewriting: The Challenges of Variety <br/>
-	<b>10:00 - 10:30</b> Damianos Chatziantoniou and Florents Tselai. The Data Management Entity: A Simple Abstraction to Facilitate Big Data Systems Interoperability
+	<ul>
+	 <li><b>Towards an Analytics Query Engine</b>, Nantia Makrynioti and Vasilis Vassalos</li>
+ 	 <li><b>Polystore Query Rewriting: The Challenges of Variety</b>, Yannis Papakonstantinou </li>
+	 <li><b>The Data Management Entity: A Simple Abstraction to Facilitate Big Data Systems Interoperability</b>Damianos Chatziantoniou and Florents Tselai</li>
+	</ul>
 <hr>
 <h4>10:30 - 11:00 Coffee Break</h4>
 <hr>
