--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li><a href="#programe">Workshop Program</a></li>
         <li><a href="#keynote">Keynotes</a></li>
         <li><a href="#committees">Committees</a></li>
-        <li><a href="#important-dates">Dates and Submissions</a></li>
+        <li><a href="#important-dates">Dates</a></li>
         
     </ul>
   </nav>
@@ -81,18 +81,20 @@
 <h4>12:30 - 14:00	 Lunch Break
 <hr>
 14:00 - 15:30 Session 3</h4>
-
-	<b>14:00 - 14:30</b> Camelia Elena Ciolac. MELOGRAPH: Multi-Engine WorkfLOw Graph Processing<br/>
-	<b>14:30 - 15:00</b> Yannis Chronis, Yannis Foufoulas, Vaggelis Nikolopoulos, Alexandros Papadopoulos, Lefteris Stamatogiannakis, Christoforos Svingos and Yannis Ioannidis. A Relational Approach to Complex Dataflows<br/>
-	<b>15:00 - 15:30</b> Katerina Doka, Maxim Filatov, Victor Giannakouris, Verena Kantere, Nectarios Koziris, Christos Mantas, Nikolaos Papailiou, Vasilios Papaioannou and Dimitrios Tsoumakos. Optimizing, Planning and Executing Analytics Workflows over Multiple Engines
+	<ul>
+	<li><b>MELOGRAPH: Multi-Engine WorkfLOw Graph Processing</b>, Camelia Elena Ciolac. </li>
+	<li><b>A Relational Approach to Complex Dataflows</b>, Yannis Chronis, Yannis Foufoulas, Vaggelis Nikolopoulos, Alexandros Papadopoulos, Lefteris Stamatogiannakis, Christoforos Svingos and Yannis Ioannidis</li>
+	<li><b>Optimizing, Planning and Executing Analytics Workflows over Multiple Engines</b>, Katerina Doka, Maxim Filatov, Victor Giannakouris, Verena Kantere, Nectarios Koziris, Christos Mantas, Nikolaos Papailiou, Vasilios Papaioannou and Dimitrios Tsoumakos</li>
+	</ul>
 <hr>	
 <h4>15:30 - 16:00 Coffee Break
 <hr>
 16:00 - 17:30 Session 4</h4>
-	<b>16:00 - 16:30</b> Florian Helff, Le Gruendwald and Laurent d'Orazio. Weighted Sum Model for Multi-Objective Query Optimization for Mobile-Cloud Database Environments<br/>
-	<b>16:30 - 17:00</b> Hans Vandierendonck, Karen Murphy, Mahwish Arif, Jiawen Sun and Dimitrios Nikolopoulos. Operator and Workflow Optimization for High-Performance Analytics<br/>
-	<b>17:00 - 17:30</b> Nikolaos Nodarakis, Spyros Sioutas, Athanasios Tsakalidis and Giannis Tzimas. Large Scale Sentiment Analysis on Twitter with Spark<br/>
-
+	<ul>
+	<li><b>Weighted Sum Model for Multi-Objective Query Optimization for Mobile-Cloud Database Environments</b>, Florian Helff, Le Gruendwald and Laurent d'Orazio</li>
+	<li><b>Operator and Workflow Optimization for High-Performance Analytics</b>, Hans Vandierendonck, Karen Murphy, Mahwish Arif, Jiawen Sun and Dimitrios Nikolopoulos</li>
+	<li><b>Large Scale Sentiment Analysis on Twitter with Spark</b>, Nikolaos Nodarakis, Spyros Sioutas, Athanasios Tsakalidis and Giannis Tzimas</li>
+	</ul>
 <h2>
 <a id="keynote" class="anchor" href="#keynote" aria-hidden="true"><span class="octicon octicon-link"></span></a>Keynote Talks</h2>
 <h4>Keynote 1</h4>
