--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
    <nav>
     <ul>
         <li><a href="#topics">Topics</a></li>
-        <li><a href="#programe">Workshop Program</a></li>
+        <li><a href="#programme">Workshop Program</a></li>
         <li><a href="#keynote">Keynotes</a></li>
         <li><a href="#committees">Committees</a></li>
         <li><a href="#important-dates">Dates</a></li>
@@ -69,7 +69,7 @@
 	<ul>
 	 <li><b>Towards an Analytics Query Engine</b>, Nantia Makrynioti and Vasilis Vassalos</li>
  	 <li><b>Polystore Query Rewriting: The Challenges of Variety</b>, Yannis Papakonstantinou </li>
-	 <li><b>The Data Management Entity: A Simple Abstraction to Facilitate Big Data Systems Interoperability</b>Damianos Chatziantoniou and Florents Tselai</li>
+	 <li><b>The Data Management Entity: A Simple Abstraction to Facilitate Big Data Systems Interoperability</b>, Damianos Chatziantoniou and Florents Tselai</li>
 	</ul>
 <hr>
 <h4>10:30 - 11:00 Coffee Break</h4>
